--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "packageManager": "pnpm@9.1.2+sha512.127dc83b9ea10c32be65d22a8efb4a65fb952e8fefbdfded39bdc3c97efc32d31b48b00420df2c1187ace28c921c902f0cb5a134a4d032b8b5295cbfa2c681e2",
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
+    "@release-it/conventional-changelog": "^8.0.1",
     "@storybook/addon-essentials": "^8.1.5",
     "@storybook/addon-interactions": "^8.1.5",
     "@storybook/addon-links": "^8.1.5",
@@ -39,6 +40,7 @@
     "@storybook/html-webpack5": "^8.1.5",
     "@storybook/test": "^8.1.5",
     "css-loader": "^7.1.2",
+    "release-it": "^17.3.0",
     "sass-loader": "^14.2.1",
     "storybook": "^8.1.5",
     "style-loader": "^4.0.0"
