ci: update release-it config

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "release-it": {
     "git": {
-      "requireBranch": "main",
+      "requireBranch": "master",
       "tagName": "v${version}"
     },
     "npm": {
