ci: update release-it config

--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "npm": {
       "publish": false
     },
+    "github": {
+      "release": true
+    },
     "plugins": {
       "@release-it/conventional-changelog": {
         "preset": {
