--- a/package.json
+++ b/package.json
@@ -26,9 +26,6 @@
     "url": "https://github.com/ismetkizgin/nvs-flexgrid/issues"
   },
   "homepage": "https://github.com/ismetkizgin/nvs-flexgrid#readme",
-  "dependencies": {
-    "sass": "^1.77.4"
-  },
   "packageManager": "pnpm@9.1.2+sha512.127dc83b9ea10c32be65d22a8efb4a65fb952e8fefbdfded39bdc3c97efc32d31b48b00420df2c1187ace28c921c902f0cb5a134a4d032b8b5295cbfa2c681e2",
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
@@ -45,7 +42,8 @@
     "release-it": "^17.3.0",
     "sass-loader": "^14.2.1",
     "storybook": "^8.1.5",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "sass": "^1.77.4"
   },
   "release-it": {
     "git": {
